--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ a:hover {
 
 /* Image styling */
 img {
-    width: 60%;
+    width: 60%; /* Default width for non-mobile devices */
     display: block;
     margin: 20px auto; /* Center images with top and bottom margin */
     opacity: 0.5; /* Semi-transparent images by default */
@@ -48,18 +48,6 @@ img {
 
 img:hover {
     opacity: 1; /* Full opacity on hover */
-}
-
-/* Video styling */
-video {
-    width: 60%;
-    opacity: 0.5;
-    margin: 20px 20%; /* Match image margin for consistency */
-    display: block; /* Ensure block level for centering */
-}
-
-video:hover {
-    opacity: 1;
 }
 
 /* Modal styles for enlarged images */
@@ -73,15 +61,15 @@ video:hover {
     width: 100%; /* Full width */
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.9); /* Black w/ opacity for overlay */
 }
 
 .modal-content {
     margin: auto;
     display: block;
-    width: 80%; /* Adjust based on preference */
-    max-width: 1200px; /* Maximum width */
+    width: 80%; /* Standard view */
+    max-width: 1200px; /* Maximum width for larger devices */
+    transition: transform 0.3s ease; /* Smooth transformation for scaling */
 }
 
 .close {
@@ -100,14 +88,14 @@ video:hover {
     color: #bbb;
 }
 
-/* for smaller screens */
+/* Responsive adjustments for smaller screens */
 @media (max-width: 768px) {
-    .centertext, .biotext, p, img, video {
-        margin: 10px auto; /* Reduced margins for smaller screens */
-        width: 90%; /* More screen space used for content */
+    img {
+        width: 100%; /* Full width for mobile devices */
+        opacity: 0.8; /* Slightly more visible by default */
     }
 
-    img, video {
-        opacity: 0.8; /* Slightly more visible by default */
+    .modal-content {
+        width: 90%; /* Use more screen for the modal content */
     }
 }
